--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 ol,
 ul {
     list-style: none;
-} 
+}
 
 a {
     text-decoration: none;
@@ -18,7 +18,7 @@ a {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    position: relative; 
+    position: relative;
     z-index: 1;
 
 }
@@ -27,10 +27,10 @@ a {
     content: "";
     position: absolute;
     top: 0;
-    left: 0;
+    left: 0; 
     background-color: rgba(0, 0, 0, .5);
     width: 100%;
-    height: 109.5%;
+    height: 100%;
     z-index: -1;
 }
 
@@ -161,6 +161,25 @@ nav ul li ul li:hover a {
     color: #fff;
     font-size: 30px;
     margin-bottom: 40px;
+    position: relative;
+}
+.banner h2::before {
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: 370px;
+    width: 90px;
+    height: 1px;  
+    background-color: #fff;
+}
+.banner h2::after {
+    content: "";
+    position: absolute;
+    top: 20px;
+    right: 370px;
+    width: 90px;
+    height: 1px; 
+    background-color: #fff;
 }
 
 .banner a {
@@ -299,7 +318,7 @@ nav ul li ul li:hover a {
 .about-section-right a {
     display: inline-block;
     background-color: #000;
-    color: #ffff; 
+    color: #ffff;
     padding: 10px 20px;
     transition: .5s;
 }
@@ -327,10 +346,12 @@ nav ul li ul li:hover a {
 }
 
 .contact-left {}
- 
+
 .contact-left h1 {}
 
-.contact-left p {margin-bottom: 30px;}
+.contact-left p {
+    margin-bottom: 30px;
+}
 
 .contact-form {}
 
@@ -340,42 +361,47 @@ nav ul li ul li:hover a {
     width: 94%;
     margin-bottom: 21px;
     outline: none;
-    border: none; 
+    border: none;
     background-color: #fff;
-    height: 50px; 
+    height: 50px;
     padding: 0 10px;
     border: 2px solid transparent;
-    box-shadow: 0px 0px 10px -5px rgba(0,0,0,.5);
+    box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, .5);
     transition: .5s;
 }
+
 .contact-form form input:focus {
     border: 2px solid #000;
     border-radius: 5px;
 
 }
+
 .contact-form form textarea:focus {
     border: 2px solid #000;
     border-radius: 5px;
 
 }
+
 .contact-form form .submit-btn:focus {
     border: none;
     border-radius: 0;
 
 }
+
 .contact-form form textarea {
     width: 94%;
     margin-bottom: 21px;
     outline: none;
-    border: none; 
+    border: none;
     background-color: #fff;
     height: 154px;
     padding: 9px 11px;
     border: 2px solid transparent;
-    box-shadow: 0px 0px 10px -5px rgba(0,0,0,.5);
+    box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, .5);
     transition: .5s;
 }
-.contact-form form  .submit-btn{
+
+.contact-form form .submit-btn {
     cursor: pointer;
     background-color: #c69453;
     width: 20%;
@@ -383,12 +409,38 @@ nav ul li ul li:hover a {
     box-sizing: content-box;
     color: #fff;
 }
+
 /* Footer Section */
-footer{background-color: #6d6d6d;padding: 50px 70px;}
-.footer-left{float: left;width: 50%;} 
-.footer-left p{}
-.footer-right{float: right;width: 50%;text-align: right;}
-.footer-right ul{padding-right: 100px;}
-.footer-right ul li{display: inline-block;}
-.footer-right ul li a{color: #dbdad7;display: inline-block;padding: 0 16px;}
-.footer-right ul li a a{}
+footer {
+    background-color: #6d6d6d;
+    padding: 50px 70px;
+}
+
+.footer-left {
+    float: left;
+    width: 50%;
+}
+
+.footer-left p {}
+
+.footer-right {
+    float: right;
+    width: 50%;
+    text-align: right;
+}
+
+.footer-right ul {
+    padding-right: 100px;
+}
+
+.footer-right ul li {
+    display: inline-block;
+}
+
+.footer-right ul li a {
+    color: #dbdad7;
+    display: inline-block;
+    padding: 0 16px;
+}
+
+.footer-right ul li a a {}
